--- a/Gallery.html
+++ b/Gallery.html
@@ -17,10 +17,10 @@
 
 
 <div class="GalleryMain">
-    <div class="gallery_inside"><img src="../MMDstore/750S.webp" alt="">750S</div>
-    <div class="gallery_inside"><img src="../MMDstore/750S SPIDER.webp" alt="">750S Spider</div>
-    <div class="gallery_inside"><img src="../MMDstore/New Artura.webp" alt="">New Artura</div>
-    <div class="gallery_inside"><img src="../MMDstore/New Artura Spider.png" alt="">New Artura Spider</div>
+    <div class="gallery_inside"><img src="750S.webp" alt="">750S</div>
+    <div class="gallery_inside"><img src="750S SPIDER.webp" alt="">750S Spider</div>
+    <div class="gallery_inside"><img src="New Artura.webp" alt="">New Artura</div>
+    <div class="gallery_inside"><img src="New Artura Spider.png" alt="">New Artura Spider</div>
 </div>
 </body>
 </html>
